// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chan-stringify > compile initial chast to markdown 1`] = `
"# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]
"
`;

exports[`chan-stringify > compile unreleased changes chast to markdown 1`] = `
"# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## 0.0.2 - 2000-01-01 [YANKED]

## 0.0.1 - 2000-01-01
"
`;
